--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -3,5 +3,5 @@ footer {
     margin-top: 5px;
     margin-bottom: 10px;
     text-align: center;
-    color: teal;
+    color: #F05A28;
   }
